<resources>
    <string name="app_name">PowerStore</string>
    <string name="order_list">Order list</string>
    <string name="send_sms">Send an SMS</string>
    <string name="share">Share</string>
    <string name="save_settings">Save settings</string>
    <string name="about_the_program">About the program</string>
    <string name="order">Order</string>
    <string name="computer">Computer</string>
    <string name="computer_image">Computer image</string>
    <string name="pc_name">PC Name</string>
    <string name="pc_desc">PC Desc</string>
    <string name="amount">AMOUNT</string>
    <string name="addons">ADDONS</string>
    <string name="mouse">MOUSE</string>
    <string name="keyboard">KEYBOARD</string>
    <string name="webcam">WEBCAM</string>
    <string name="monitor">MONITOR</string>
    <string name="none">None</string>
    <string name="price">price</string>
    <string name="total_price">TOTAL PRICE:</string>
    <string name="confirm_order_details">Confirm order details</string>
    <string name="pc">PC</string>
    <string name="place_order">Place order</string>
    <string name="empty" translatable="false">-</string>
    <string name="name_or_company_name">Name or company name</string>
    <string name="phone_number">Phone number</string>
    <string name="missing_detail_data">Missing detail data</string>
    <string name="missing_name">Missing name</string>
    <string name="missing_passwd">Missing password</string>
    <string name="missing_phone_number">Missing phone number</string>
    <string name="github_link" translatable="false">https://github.com/bellrise/android-shop</string>
    <string name="at_bellrise" translatable="false">\@bellrise</string>
    <string name="not_implemented">Not implemented</string>
    <string name="ordered_at">Ordered at:</string>
    <string name="username">Username</string>
    <string name="passwd">Password</string>
    <string name="login">Login</string>
    <string name="wrong_user_or_passwd">Wrong username or password</string>
    <string name="placed_order_for">Placed an order for</string>
    <string name="bought">Bought</string>
    <string name="products">product(s)</string>
    <string name="add_user">Add user</string>
    <string name="added_user">Added user</string>
    <string name="already_exists">already exists</string>
    <string name="log_out">Log out</string>
</resources>