<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:layout_alignStart="@id/add_user_username"
        android:textSize="18sp"
        android:text="@string/add_user" />

    <EditText
        android:id="@+id/add_user_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_user_text"
        android:inputType="text"
        android:autofillHints="username"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/add_user_passwd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_user_username"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/passwd"
        android:autofillHints="password" />

    <Button
        android:id="@+id/add_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_user_passwd"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/add_user" />

</RelativeLayout>